# n-reinas

./: .gitignore  README.md  pyproject.toml
server/: server.cabal  servidor.hs
src/: cliente.py  error_msg.py  input_user.py  main.py  navegador.py  prueba_flet.py  solver.py  solver_remoto.py  tablero.py
